--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div id="app"></div>
+    <script src="./src/jquery-3.6.1.min.js"></script>
     <script src="./src/index.js"></script>
 </body>
 
